--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
 certifi==2024.12.14
 charset-normalizer==3.4.1
+coverage==7.6.10
 Faker==33.3.0
 idna==3.10
 iniconfig==2.0.0
+isodate==0.7.2
 packaging==24.2
 pluggy==1.5.0
 pytest==8.3.4
+pytest-cov==6.0.0
+pytest-mock==3.14.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 requests==2.32.3
