--- a/requirements.txt
+++ b/requirements.txt
@@ -14,5 +14,6 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 requests==2.32.3
 six==1.17.0
+SQLAlchemy==2.0.37
 typing_extensions==4.12.2
 urllib3==2.3.0
