--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,48 @@
+asttokens==3.0.0
 certifi==2024.12.14
 charset-normalizer==3.4.1
+contourpy==1.3.1
 coverage==7.6.10
+cycler==0.12.1
+decorator==5.1.1
+executing==2.2.0
 Faker==33.3.0
+fonttools==4.55.6
 idna==3.10
 iniconfig==2.0.0
+ipython==8.31.0
 isodate==0.7.2
+jedi==0.19.2
+kiwisolver==1.4.8
+matplotlib==3.10.0
+matplotlib-inline==0.1.7
+mplcursors==0.6
+numpy==2.2.2
 packaging==24.2
+pandas==2.2.3
+parso==0.8.4
+pexpect==4.9.0
+pillow==11.1.0
+plotly==5.24.1
 pluggy==1.5.0
+prompt_toolkit==3.0.50
+ptyprocess==0.7.0
+pure_eval==0.2.3
+Pygments==2.19.1
+pyparsing==3.2.1
 pytest==8.3.4
 pytest-cov==6.0.0
 pytest-mock==3.14.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2024.2
 requests==2.32.3
 six==1.17.0
 SQLAlchemy==2.0.37
+stack-data==0.6.3
+tenacity==9.0.0
+traitlets==5.14.3
 typing_extensions==4.12.2
+tzdata==2025.1
 urllib3==2.3.0
+wcwidth==0.2.13
